[package]
name = "hashstorage"
version = "2.0.0"
authors = ["Alexander <mail@fomalhaut.su>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
actix-web = "3.3.2"
# bigi = { git = "https://github.com/fomalhaut88/bigi.git", tag = "v0.4.0" }
# bigi-ecc = { git = "https://github.com/fomalhaut88/bigi-ecc.git", tag = "v0.4.0" }
lbase = { git = "https://github.com/fomalhaut88/lbase.git" }
