[package]
name = "hashstorage"
version = "2.2.0"
authors = ["Alexander <mail@fomalhaut.su>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
serde = "1.0"
actix-web = "3.3.2"
actix-cors = "0.5.4"
bigi-ecc = { git = "https://github.com/fomalhaut88/bigi-ecc.git", tag = "v1.1.0" }
lbase = { git = "https://github.com/fomalhaut88/lbase.git", tag = "v0.2.0" }
hashstorage-utils = { git = "https://github.com/fomalhaut88/hashstorage-utils.git", tag = "v1.0.0" }
